ScheduleVisitDetails , one more attribute added villageName, and displayed in ScheduleDetailsAdapter

--- a/app/src/main/res/layout/item_schedule_details.xml
+++ b/app/src/main/res/layout/item_schedule_details.xml
@@ -13,7 +13,7 @@
             android:id="@+id/txtDate"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_30sdp"
-            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_3sdp"
             android:background="@drawable/round_corner_bg"
             android:backgroundTint="@color/textBlue"
             android:gravity="center"
@@ -21,6 +21,9 @@
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textStyle="bold"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:maxLength="12"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -32,21 +35,41 @@
             style="@style/common_text_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/_5sdp"
             android:ellipsize="end"
-            android:maxLength="15"
+            android:maxLength="10"
+            android:maxLines="1"
             android:textStyle="normal"
             app:layout_constraintStart_toEndOf="@id/txtDate"
             app:layout_constraintTop_toTopOf="@id/txtDate"
             tools:text="Satya Thakur" />
 
         <TextView
+            android:id="@+id/txtVillageName"
+            style="@style/common_text_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_3sdp"
+            android:textStyle="normal"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:maxLength="10"
+            app:layout_constraintBottom_toBottomOf="@id/txtMember"
+            app:layout_constraintEnd_toStartOf="@id/txtScheduledTime"
+            app:layout_constraintTop_toTopOf="@id/txtMember"
+            tools:text="Siddapures" />
+
+
+        <TextView
             android:id="@+id/txtScheduledTime"
             style="@style/common_text_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_3sdp"
             android:textStyle="normal"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:maxLength="10"
             app:layout_constraintBottom_toBottomOf="@id/txtMember"
             app:layout_constraintEnd_toStartOf="@id/txtQueue"
             app:layout_constraintTop_toTopOf="@id/txtMember"
@@ -57,8 +80,11 @@
             style="@style/common_text_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_3sdp"
             android:textStyle="normal"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:maxLength="4"
             app:layout_constraintBottom_toBottomOf="@id/txtMember"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/txtMember"
