--- a/app/src/main/res/layout/item_schedule_details.xml
+++ b/app/src/main/res/layout/item_schedule_details.xml
@@ -13,7 +13,7 @@
             android:id="@+id/txtDate"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_30sdp"
-            android:layout_marginStart="@dimen/_3sdp"
+            android:layout_marginStart="@dimen/_5sdp"
             android:background="@drawable/round_corner_bg"
             android:backgroundTint="@color/textBlue"
             android:gravity="center"
@@ -35,9 +35,9 @@
             style="@style/common_text_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:ellipsize="end"
-            android:maxLength="10"
+            android:maxLength="12"
             android:maxLines="1"
             android:textStyle="normal"
             app:layout_constraintStart_toEndOf="@id/txtDate"
@@ -53,10 +53,10 @@
             android:textStyle="normal"
             android:ellipsize="end"
             android:maxLines="1"
-            android:maxLength="10"
-            app:layout_constraintBottom_toBottomOf="@id/txtMember"
-            app:layout_constraintEnd_toStartOf="@id/txtScheduledTime"
-            app:layout_constraintTop_toTopOf="@id/txtMember"
+            android:maxLength="12"
+            android:layout_marginTop="@dimen/_3sdp"
+           app:layout_constraintTop_toBottomOf="@id/txtMember"
+            app:layout_constraintStart_toStartOf="@id/txtMember"
             tools:text="Siddapures" />
 
 
@@ -65,7 +65,7 @@
             style="@style/common_text_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_3sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
             android:textStyle="normal"
             android:ellipsize="end"
             android:maxLines="1"
@@ -80,7 +80,7 @@
             style="@style/common_text_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_3sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
             android:textStyle="normal"
             android:ellipsize="end"
             android:maxLines="1"
@@ -95,12 +95,12 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
             android:layout_marginStart="@dimen/_90sdp"
-            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
             android:background="@color/borderColor"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/txtMember"
-            app:layout_constraintTop_toBottomOf="@id/txtMember" />
+            app:layout_constraintStart_toStartOf="@id/txtVillageName"
+            app:layout_constraintTop_toBottomOf="@id/txtVillageName" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
