in VisitCompletionOfCustomerActivity , 3 buttons of Complete will have 2 Scenarios.. 1) Coming from Calls For The Day(list) Adapter 2) Coming From Loan Collection(list) Adapter

--- a/app/src/main/res/layout/item_calls_for_the_day.xml
+++ b/app/src/main/res/layout/item_calls_for_the_day.xml
@@ -131,7 +131,7 @@
 
 
         <ImageView
-            android:id="@+id/ivVisitAttempt"
+            android:id="@+id/ivCallsAttempt"
             android:layout_width="@dimen/_15sdp"
             android:layout_height="@dimen/_15sdp"
             android:layout_marginStart="@dimen/_10sdp"
