In ScheduleDetailsActivity (DashBoard) and StatusOfCustomerActivity(LoanCollectionAdapter on clicking status icon) customDialogSearchDate- date reset icon added , if fromDate or toDate empty then error msg will display accordingly, On clicking Clear All , Searched Date Range and Clear All text will be gone and Unfiltered result list will display

--- a/app/src/main/res/layout/custom_dialog_search_date.xml
+++ b/app/src/main/res/layout/custom_dialog_search_date.xml
@@ -50,6 +50,16 @@
                 android:layout_height="@dimen/_20sdp"
                 app:tint="@color/white" />
 
+            <ImageView
+                android:id="@+id/ivResetDate"
+                app:layout_constraintStart_toStartOf="@id/toolbar"
+                app:layout_constraintTop_toTopOf="@id/toolbar"
+                app:layout_constraintBottom_toBottomOf="@id/toolbar"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:src="@drawable/refresh_icon"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                app:tint="@color/white" />
 
 
             <TextView
